# django_discord.py

./: .coveragerc  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  manage.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/django_discord/py/: __init__.py  __main__.py  exceptions.py
src/django_discord/py/bot/: apps.py  basic_bot.py  consumers.py  events.py  example_bot.py  helpers.py  models.py  signals.py
src/django_discord/py/bot/migrations/: 0001_initial.py
src/django_discord/py/cli/: __init__.py
src/django_discord/py/configuration/: __main__.py  asgi.py  urls.py  wsgi.py
src/django_discord/py/configuration/common_components/: base.py  channels.py  django_extensions.py
src/django_discord/py/configuration/http_settings/: __init__.py
src/django_discord/py/configuration/settings/: __init__.py
src/django_discord/py/configuration/settings/components/: base.py  discord.py
src/django_discord/py/configuration/worker_settings/: __init__.py
src/django_discord/py/configuration/worker_settings/components/: discord.py  worker_apps.py
src/django_discord/py/entrypoints/: channels_entrypoint.py  http_entrypoint.py
src/django_discord/py/example_bot/: bot_plugins.py
src/django_discord/py/plugins/: apply.py  datatypes.py
tests/: conftest.py
tests/django_discord/py/configuration/: test_main.py
